# Magic-RHI

./: .gitattributes  CMakeLists.txt  Readme.md  VERSION  build.bat  main.cpp
Engine/Source/RHI/DirectX11RHI/: CMakeLists.txt
Engine/Source/RHI/DirectX11RHI/Internal/: DescriptorHeapDirectX11.h  DirectXConfig.h  RHICommandListDirectX11.h  RHIResourceDirectX11.h  RHIRootSignatureDirectX11.h
Engine/Source/RHI/DirectX11RHI/Private/: D3D11RHI.cpp  DescriptorHeapDirectX11.cpp  DirectX11RHI.def  PipelineStateDirectX11.cpp  RHIDirectX11.cpp  RHIResourceDirectX11.cpp  RHIRootSignatureDirectX11.cpp  ShaderCompilerDirectX11.cpp  SwapChainDirectX11.cpp
Engine/Source/RHI/DirectX11RHI/Private/CommandList/: CommandListDX11_Clear.cpp  CommandListDX11_Draw.cpp  CommandListDX11_InputAssembly.cpp  CommandListDX11_OutputMerger.cpp  CommandListDX11_Rasterizer.cpp  CommandListDX11_Resource.cpp  CommandListDX11_ResourceBarrier.cpp  CommandListDX11_RootSignature.cpp  CommandListDX11_Shaders.cpp  (+1 more)
Engine/Source/RHI/DirectX11RHI/Public/: RHIDirectX11.h  RHIRootSignatureDirectX11.h
Engine/Source/RHI/DirectX12RHI/: CMakeLists.txt
Engine/Source/RHI/DirectX12RHI/Internal/: DescriptorHeapAllocator.h  DescriptorHeapDirectX12.h  DirectXHelper.h  RHICommandListDirectX12.h  RHIResourceDirectX12.h
Engine/Source/RHI/DirectX12RHI/Private/: D3D12RHI.cpp  DescriptorHeapDirectX12.cpp  DirectX12RHI.def  PipelineStateDirectX12.cpp  RHIDirectX12.cpp  RHIResourceDirectX12.cpp  RHIRootSignatureDirectX12.cpp  ShaderCompilerDirectX12.cpp  SwapChainDirectX12.cpp
Engine/Source/RHI/DirectX12RHI/Public/: RHIDirectX12.h  RHIRootSignatureDirectX12.h  SwapChainDirectX12.h
Engine/Source/Runtime/D3D11RHI/: CMakeLists.txt
Engine/Source/Runtime/D3D11RHI/Internal/: RHICommandListD3D11.h  RHIPipelineStateD3D11.h  RHIResourceD3D11.h  RHIRootSignatureD3D11.h
Engine/Source/Runtime/D3D11RHI/Private/: CreateShaderD3D11.cpp  D3D11RHI.cpp  D3D11RHI.def  DescriptorHeapD3D11.cpp  DescriptorViewD3D11.cpp  PipelineStateD3D11.cpp  RHID3D11.cpp  RHIResourceD3D11.cpp  RHIRootSignatureD3D11.cpp  ShaderCompilerBackendD3D11.cpp  ShaderCompilerD3D11.cpp  SwapChainD3D11.cpp
Engine/Source/Runtime/D3D11RHI/Public/: RHID3D11.h
Engine/Source/Runtime/D3D12RHI/: CMakeLists.txt
Engine/Source/Runtime/D3D12RHI/Internal/: D3D12Config.h  DescriptorHeapD3D12.h  DirectXConfig.h  RHICommandListD3D12.h  RHIResourceD3D12.h  RHIRootSignatureD3D12.h
Engine/Source/Runtime/D3D12RHI/Private/: CreateShaderD3D12.cpp  D3D12RHI.cpp  D3D12RHI.def  DescriptorHeapD3D12.cpp  DescriptorViewD3D12.cpp  PipelineStateD3D12.cpp  RHICommandListD3D12.cpp  RHID3D12.cpp  RHIResourceD3D12.cpp  RHIRootSignatureD3D12.cpp  ShaderCompilerBackendD3D12.cpp  ShaderCompilerD3D12.cpp  SwapChainD3D12.cpp
Engine/Source/Runtime/D3D12RHI/Public/: RHID3D12.h
Engine/Source/Runtime/DirectX11RHI/: CMakeLists.txt
Engine/Source/Runtime/DirectX11RHI/Internal/: DescriptorHeapD3D11.h  DescriptorHeapDirectX11.h  DirectXHelper.h  RHICommandListD3D11.h  RHICommandListDirectX11.h  RHIPipelineStateD3D11.h  RHIPipelineStateDirectX11.h  RHIResourceD3D11.h  RHIResourceDirectX11.h  RHIRootSignatureD3D11.h  RHIRootSignatureDirectX11.h
Engine/Source/Runtime/DirectX11RHI/Private/: D3D11RHI.cpp  D3D11RHI.def  DescriptorHeapD3D11.cpp  DescriptorHeapDirectX11.cpp  DescriptorViewDirectX11.cpp  PipelineStateDirectX11.cpp  RHID3D11.cpp  RHIDirectX11.cpp  RHIResourceD3D11.cpp  RHIResourceDirectX11.cpp  RHIRootSignatureD3D11.cpp  RHIRootSignatureDirectX11.cpp  ShaderCompilerD3D11.cpp  ShaderCompilerDirectX11.cpp  SwapChainDirectX11.cpp
Engine/Source/Runtime/DirectX11RHI/Public/: RHID3D11.h  RHIDirectX11.h  SwapChainD3D11.h  SwapChainDirectX11.h
Engine/Source/Runtime/DirectX12RHI/: CMakeLists.txt
Engine/Source/Runtime/DirectX12RHI/Internal/: DescriptorHeapDirectX12.h  DirectXConfig.h  RHICommandListD3D12.h  RHICommandListDirectX12.h  RHIPipelineStateD3D12.h  RHIPipelineStateDirectX12.h  RHIResourceDirectX12.h  RHIRootSignatureDirectX12.h
Engine/Source/Runtime/DirectX12RHI/Private/: D3D12RHI.cpp  DescriptorHeapD3D12.cpp  DescriptorHeapDirectX12.cpp  DescriptorViewDirectX12.cpp  PipelineStateDirectX12.cpp  RHIDirectX12.cpp  RHIResourceD3D12.cpp  RHIResourceDirectX12.cpp  RHIRootSignatureD3D12.cpp  RHIRootSignatureDirectX12.cpp  ShaderCompilerD3D12.cpp  ShaderCompilerDirectX12.cpp  SwapChainD3D12.cpp  SwapChainDirectX12.cpp
Engine/Source/Runtime/DirectX12RHI/Public/: RHID3D12.h  RHIDirectX12.h  SwapChainD3D12.h  SwapChainDirectX12.h
Engine/Source/Runtime/RHI/: CMakeLists.txt
Engine/Source/Runtime/RHI/Internal/: RHILoader.h  RHISPIRV.h  RHIShaderCompiler.h
Engine/Source/Runtime/RHI/Private/: RHI.cpp  RHICommandList.cpp  RHIInterface.cpp  RHILoader.cpp  RHIPipelineState.cpp  RHIPlatformDetection.cpp  RHIResources.cpp  RHIRootSignature.cpp  RHISPIRV.cpp  RHISPIRVCompiler.cpp  RHISPIRVGenerationReflection.cpp
Engine/Source/Runtime/RHI/Public/: IRHILoader.h  IRHIModule.h  RHI.h  RHI.hpp  RHICommandList.h  RHIDynamicLoader.h  RHIInterface.h  RHIPipelineState.h  RHIResource.h  RHIRootSignature.h
Engine/Source/Runtime/VulKanRHI/: CMakeLists.txt
Engine/Source/Runtime/VulKanRHI/Internal/: DescriptorHeapVulKan.h  RHICommandListVulKan.h  RHIResourceVulKan.h  RHIRootSignatureVulKan.h  VulKanConfig.h
Engine/Source/Runtime/VulKanRHI/Private/: CreateShaderVulKan.cpp  DescriptorHeapVulKan.cpp  DescriptorViewVulKan.cpp  RHICommandListVulKan.cpp  RHIResourceVulKan.cpp  RHIRootSignatureVulKan.cpp  RHIVulKan.cpp  ShaderCompilerBackendVulkan.cpp  SwapChainVulkan.cpp  VulKanRHI.cpp  VulKanRHI.def
Engine/Source/Runtime/VulKanRHI/Public/: RHIVulKan.h
RHI/: CMakeLists.txt
RHI/Internal/: DirectXConfig.h  DirectXHelper.h
RHI/Internal/DirectX11/: RHIDirectX11.h  SwapChainDirectX11.h
RHI/Internal/DirectX12/: RHIDirectX12.h  SwapChainDirectX12.h
RHI/Private/: RHI.cpp  RHIResources.cpp
RHI/Private/DirectX11/: RHIDirectX11.cpp  SwapChainDirectX11.cpp
RHI/Private/DirectX12/: RHIDirectX12.cpp  SwapChainDirectX12.cpp
RHI/Public/: RHI.h  RHIResource.h
RHI/Public/Common/: RHIResourceType.h  RHI_API.h
(+126 files in other folders)
